parser.output
Grammar

    0 $accept: program $end

    1 program: stmt_list KW_END SEMICOLON

    2 stmt_list: statement
    3          | stmt_list statement

    4 block_stmts: /* empty */
    5            | block_stmts statement

    6 statement: KW_REMEMBER IDENTIFIER KW_AS expression SEMICOLON
    7          | KW_FORGET IDENTIFIER SEMICOLON
    8          | IDENTIFIER KW_AS expression SEMICOLON
    9          | KW_IF LPAREN expression RPAREN block KW_ELSE block
   10          | KW_IF LPAREN expression RPAREN block
   11          | KW_WHILE LPAREN expression RPAREN KW_REPEAT block
   12          | KW_RUN LPAREN expression RPAREN block
   13          | KW_SHOW LPAREN expression RPAREN SEMICOLON
   14          | DOLLAR block DOLLAR

   15 block: LBRACE block_stmts RBRACE

   16 expression: term
   17           | OP_MINUS expression
   18           | OP_PLUS expression
   19           | expression OP_MUL expression
   20           | expression OP_DIV expression
   21           | expression OP_PLUS expression
   22           | expression OP_MINUS expression
   23           | expression OP_EQ expression
   24           | expression OP_NEQ expression
   25           | expression OP_GT expression
   26           | expression OP_LT expression
   27           | expression OP_GTE expression
   28           | expression OP_LTE expression

   29 term: IDENTIFIER
   30     | NUMBER
   31     | LPAREN expression RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
OP_NEQ (258) 24
OP_EQ (259) 23
OP_LTE (260) 28
OP_GTE (261) 27
OP_LT (262) 26
OP_GT (263) 25
OP_MINUS (264) 17 22
OP_PLUS (265) 18 21
OP_DIV (266) 20
OP_MUL (267) 19
UPLUS (268)
UMINUS (269)
NUMBER (270) 30
IDENTIFIER (271) 6 7 8 29
KW_REMEMBER (272) 6
KW_AS (273) 6 8
KW_FORGET (274) 7
KW_IF (275) 9 10
KW_ELSE (276) 9
KW_WHILE (277) 11
KW_REPEAT (278) 11
KW_RUN (279) 12
KW_SHOW (280) 13
KW_END (281) 1
DOLLAR (282) 14
LPAREN (283) 9 10 11 12 13 31
RPAREN (284) 9 10 11 12 13 31
LBRACE (285) 15
RBRACE (286) 15
SEMICOLON (287) 1 6 7 8 13


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
stmt_list (35)
    on left: 2 3, on right: 1 3
block_stmts (36)
    on left: 4 5, on right: 5 15
statement (37)
    on left: 6 7 8 9 10 11 12 13 14, on right: 2 3 5
block (38)
    on left: 15, on right: 9 10 11 12 14
expression (39)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 6 8 9 10 11 12 13 17 18 19 20 21 22 23 24 25 26 27 28
    31
term (40)
    on left: 29 30 31, on right: 16


state 0

    0 $accept: . program $end

    IDENTIFIER   shift, and go to state 1
    KW_REMEMBER  shift, and go to state 2
    KW_FORGET    shift, and go to state 3
    KW_IF        shift, and go to state 4
    KW_WHILE     shift, and go to state 5
    KW_RUN       shift, and go to state 6
    KW_SHOW      shift, and go to state 7
    DOLLAR       shift, and go to state 8

    program    go to state 9
    stmt_list  go to state 10
    statement  go to state 11


state 1

    8 statement: IDENTIFIER . KW_AS expression SEMICOLON

    KW_AS  shift, and go to state 12


state 2

    6 statement: KW_REMEMBER . IDENTIFIER KW_AS expression SEMICOLON

    IDENTIFIER  shift, and go to state 13


state 3

    7 statement: KW_FORGET . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 14


state 4

    9 statement: KW_IF . LPAREN expression RPAREN block KW_ELSE block
   10          | KW_IF . LPAREN expression RPAREN block

    LPAREN  shift, and go to state 15


state 5

   11 statement: KW_WHILE . LPAREN expression RPAREN KW_REPEAT block

    LPAREN  shift, and go to state 16


state 6

   12 statement: KW_RUN . LPAREN expression RPAREN block

    LPAREN  shift, and go to state 17


state 7

   13 statement: KW_SHOW . LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 18


state 8

   14 statement: DOLLAR . block DOLLAR

    LBRACE  shift, and go to state 19

    block  go to state 20


state 9

    0 $accept: program . $end

    $end  shift, and go to state 21


state 10

    1 program: stmt_list . KW_END SEMICOLON
    3 stmt_list: stmt_list . statement

    IDENTIFIER   shift, and go to state 1
    KW_REMEMBER  shift, and go to state 2
    KW_FORGET    shift, and go to state 3
    KW_IF        shift, and go to state 4
    KW_WHILE     shift, and go to state 5
    KW_RUN       shift, and go to state 6
    KW_SHOW      shift, and go to state 7
    KW_END       shift, and go to state 22
    DOLLAR       shift, and go to state 8

    statement  go to state 23


state 11

    2 stmt_list: statement .

    $default  reduce using rule 2 (stmt_list)


state 12

    8 statement: IDENTIFIER KW_AS . expression SEMICOLON

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 29
    term        go to state 30


state 13

    6 statement: KW_REMEMBER IDENTIFIER . KW_AS expression SEMICOLON

    KW_AS  shift, and go to state 31


state 14

    7 statement: KW_FORGET IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 32


state 15

    9 statement: KW_IF LPAREN . expression RPAREN block KW_ELSE block
   10          | KW_IF LPAREN . expression RPAREN block

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 33
    term        go to state 30


state 16

   11 statement: KW_WHILE LPAREN . expression RPAREN KW_REPEAT block

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 34
    term        go to state 30


state 17

   12 statement: KW_RUN LPAREN . expression RPAREN block

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 35
    term        go to state 30


state 18

   13 statement: KW_SHOW LPAREN . expression RPAREN SEMICOLON

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 36
    term        go to state 30


state 19

   15 block: LBRACE . block_stmts RBRACE

    $default  reduce using rule 4 (block_stmts)

    block_stmts  go to state 37


state 20

   14 statement: DOLLAR block . DOLLAR

    DOLLAR  shift, and go to state 38


state 21

    0 $accept: program $end .

    $default  accept


state 22

    1 program: stmt_list KW_END . SEMICOLON

    SEMICOLON  shift, and go to state 39


state 23

    3 stmt_list: stmt_list statement .

    $default  reduce using rule 3 (stmt_list)


state 24

   17 expression: OP_MINUS . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 40
    term        go to state 30


state 25

   18 expression: OP_PLUS . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 41
    term        go to state 30


state 26

   30 term: NUMBER .

    $default  reduce using rule 30 (term)


state 27

   29 term: IDENTIFIER .

    $default  reduce using rule 29 (term)


state 28

   31 term: LPAREN . expression RPAREN

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 42
    term        go to state 30


state 29

    8 statement: IDENTIFIER KW_AS expression . SEMICOLON
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ     shift, and go to state 43
    OP_EQ      shift, and go to state 44
    OP_LTE     shift, and go to state 45
    OP_GTE     shift, and go to state 46
    OP_LT      shift, and go to state 47
    OP_GT      shift, and go to state 48
    OP_MINUS   shift, and go to state 49
    OP_PLUS    shift, and go to state 50
    OP_DIV     shift, and go to state 51
    OP_MUL     shift, and go to state 52
    SEMICOLON  shift, and go to state 53


state 30

   16 expression: term .

    $default  reduce using rule 16 (expression)


state 31

    6 statement: KW_REMEMBER IDENTIFIER KW_AS . expression SEMICOLON

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 54
    term        go to state 30


state 32

    7 statement: KW_FORGET IDENTIFIER SEMICOLON .

    $default  reduce using rule 7 (statement)


state 33

    9 statement: KW_IF LPAREN expression . RPAREN block KW_ELSE block
   10          | KW_IF LPAREN expression . RPAREN block
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ    shift, and go to state 43
    OP_EQ     shift, and go to state 44
    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52
    RPAREN    shift, and go to state 55


state 34

   11 statement: KW_WHILE LPAREN expression . RPAREN KW_REPEAT block
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ    shift, and go to state 43
    OP_EQ     shift, and go to state 44
    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52
    RPAREN    shift, and go to state 56


state 35

   12 statement: KW_RUN LPAREN expression . RPAREN block
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ    shift, and go to state 43
    OP_EQ     shift, and go to state 44
    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52
    RPAREN    shift, and go to state 57


state 36

   13 statement: KW_SHOW LPAREN expression . RPAREN SEMICOLON
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ    shift, and go to state 43
    OP_EQ     shift, and go to state 44
    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52
    RPAREN    shift, and go to state 58


state 37

    5 block_stmts: block_stmts . statement
   15 block: LBRACE block_stmts . RBRACE

    IDENTIFIER   shift, and go to state 1
    KW_REMEMBER  shift, and go to state 2
    KW_FORGET    shift, and go to state 3
    KW_IF        shift, and go to state 4
    KW_WHILE     shift, and go to state 5
    KW_RUN       shift, and go to state 6
    KW_SHOW      shift, and go to state 7
    DOLLAR       shift, and go to state 8
    RBRACE       shift, and go to state 59

    statement  go to state 60


state 38

   14 statement: DOLLAR block DOLLAR .

    $default  reduce using rule 14 (statement)


state 39

    1 program: stmt_list KW_END SEMICOLON .

    $default  reduce using rule 1 (program)


state 40

   17 expression: OP_MINUS expression .
   19           | expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    $default  reduce using rule 17 (expression)


state 41

   18 expression: OP_PLUS expression .
   19           | expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    $default  reduce using rule 18 (expression)


state 42

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression
   31 term: LPAREN expression . RPAREN

    OP_NEQ    shift, and go to state 43
    OP_EQ     shift, and go to state 44
    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52
    RPAREN    shift, and go to state 61


state 43

   24 expression: expression OP_NEQ . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 62
    term        go to state 30


state 44

   23 expression: expression OP_EQ . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 63
    term        go to state 30


state 45

   28 expression: expression OP_LTE . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 64
    term        go to state 30


state 46

   27 expression: expression OP_GTE . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 65
    term        go to state 30


state 47

   26 expression: expression OP_LT . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 66
    term        go to state 30


state 48

   25 expression: expression OP_GT . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 67
    term        go to state 30


state 49

   22 expression: expression OP_MINUS . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 68
    term        go to state 30


state 50

   21 expression: expression OP_PLUS . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 69
    term        go to state 30


state 51

   20 expression: expression OP_DIV . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 70
    term        go to state 30


state 52

   19 expression: expression OP_MUL . expression

    OP_MINUS    shift, and go to state 24
    OP_PLUS     shift, and go to state 25
    NUMBER      shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    LPAREN      shift, and go to state 28

    expression  go to state 71
    term        go to state 30


state 53

    8 statement: IDENTIFIER KW_AS expression SEMICOLON .

    $default  reduce using rule 8 (statement)


state 54

    6 statement: KW_REMEMBER IDENTIFIER KW_AS expression . SEMICOLON
   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_NEQ     shift, and go to state 43
    OP_EQ      shift, and go to state 44
    OP_LTE     shift, and go to state 45
    OP_GTE     shift, and go to state 46
    OP_LT      shift, and go to state 47
    OP_GT      shift, and go to state 48
    OP_MINUS   shift, and go to state 49
    OP_PLUS    shift, and go to state 50
    OP_DIV     shift, and go to state 51
    OP_MUL     shift, and go to state 52
    SEMICOLON  shift, and go to state 72


state 55

    9 statement: KW_IF LPAREN expression RPAREN . block KW_ELSE block
   10          | KW_IF LPAREN expression RPAREN . block

    LBRACE  shift, and go to state 19

    block  go to state 73


state 56

   11 statement: KW_WHILE LPAREN expression RPAREN . KW_REPEAT block

    KW_REPEAT  shift, and go to state 74


state 57

   12 statement: KW_RUN LPAREN expression RPAREN . block

    LBRACE  shift, and go to state 19

    block  go to state 75


state 58

   13 statement: KW_SHOW LPAREN expression RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 76


state 59

   15 block: LBRACE block_stmts RBRACE .

    $default  reduce using rule 15 (block)


state 60

    5 block_stmts: block_stmts statement .

    $default  reduce using rule 5 (block_stmts)


state 61

   31 term: LPAREN expression RPAREN .

    $default  reduce using rule 31 (term)


state 62

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   24           | expression OP_NEQ expression .
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 24 (expression)


state 63

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   23           | expression OP_EQ expression .
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_LTE    shift, and go to state 45
    OP_GTE    shift, and go to state 46
    OP_LT     shift, and go to state 47
    OP_GT     shift, and go to state 48
    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 23 (expression)


state 64

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression
   28           | expression OP_LTE expression .

    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 28 (expression)


state 65

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   27           | expression OP_GTE expression .
   28           | expression . OP_LTE expression

    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 27 (expression)


state 66

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   26           | expression OP_LT expression .
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 26 (expression)


state 67

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   25           | expression OP_GT expression .
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_MINUS  shift, and go to state 49
    OP_PLUS   shift, and go to state 50
    OP_DIV    shift, and go to state 51
    OP_MUL    shift, and go to state 52

    $default  reduce using rule 25 (expression)


state 68

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   22           | expression OP_MINUS expression .
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_DIV  shift, and go to state 51
    OP_MUL  shift, and go to state 52

    $default  reduce using rule 22 (expression)


state 69

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   21           | expression OP_PLUS expression .
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    OP_DIV  shift, and go to state 51
    OP_MUL  shift, and go to state 52

    $default  reduce using rule 21 (expression)


state 70

   19 expression: expression . OP_MUL expression
   20           | expression . OP_DIV expression
   20           | expression OP_DIV expression .
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    $default  reduce using rule 20 (expression)


state 71

   19 expression: expression . OP_MUL expression
   19           | expression OP_MUL expression .
   20           | expression . OP_DIV expression
   21           | expression . OP_PLUS expression
   22           | expression . OP_MINUS expression
   23           | expression . OP_EQ expression
   24           | expression . OP_NEQ expression
   25           | expression . OP_GT expression
   26           | expression . OP_LT expression
   27           | expression . OP_GTE expression
   28           | expression . OP_LTE expression

    $default  reduce using rule 19 (expression)


state 72

    6 statement: KW_REMEMBER IDENTIFIER KW_AS expression SEMICOLON .

    $default  reduce using rule 6 (statement)


state 73

    9 statement: KW_IF LPAREN expression RPAREN block . KW_ELSE block
   10          | KW_IF LPAREN expression RPAREN block .

    KW_ELSE  shift, and go to state 77

    $default  reduce using rule 10 (statement)


state 74

   11 statement: KW_WHILE LPAREN expression RPAREN KW_REPEAT . block

    LBRACE  shift, and go to state 19

    block  go to state 78


state 75

   12 statement: KW_RUN LPAREN expression RPAREN block .

    $default  reduce using rule 12 (statement)


state 76

   13 statement: KW_SHOW LPAREN expression RPAREN SEMICOLON .

    $default  reduce using rule 13 (statement)


state 77

    9 statement: KW_IF LPAREN expression RPAREN block KW_ELSE . block

    LBRACE  shift, and go to state 19

    block  go to state 79


state 78

   11 statement: KW_WHILE LPAREN expression RPAREN KW_REPEAT block .

    $default  reduce using rule 11 (statement)


state 79

    9 statement: KW_IF LPAREN expression RPAREN block KW_ELSE block .

    $default  reduce using rule 9 (statement)
